<resources>
    <string name="app_name">LayoutMobile</string>
    <string name="login">Login</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="insira_seu_e_mail">Insira seu e-mail</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="ou">ou</string>
    <string name="login_com_google">Login com Google</string>
    <string name="icone_de_cadeado">icone de cadeado</string>
    <string name="icone_de_email">icone de email</string>
    <string name="imagem_ilustrativa">imagem ilustrativa</string>
    <string name="novidades">Novidades</string>
    <string name="destaques">Destaques</string>
    <string name="equipe">Equipe</string>
    <string name="people_person">People Person</string>
    <string name="dream_team">Dream Team</string>
    <string name="icon_menu">icon_menu</string>
    <string name="icon_chat">icon_chat</string>
    <string name="avatar_user">avatar_user</string>
    <string name="icon_notification">icon_notification</string>
    <string name="icon_add">icon_add</string>
    <string name="icon_search">icon_search</string>
    <string name="icon_home">icon_home</string>
    <string name="_1910_points">1910 points</string>
    <string name="people_person_2">people_person_2</string>
    <string name="people_persona">People Persona</string>
    <string name="go_ahead">Go Ahead</string>
    <string name="noob">Noob</string>
    <string name="expert">Expert</string>
    <string name="bem_vinde_fulano">Bem vinde Fulano!</string>
    <string name="suas_conquistas">Suas conquistas</string>
    <string name="premios">Prêmios</string>
    <string name="explorar">Explorar</string>
    <string name="acesso_rapido">Acesso Rápido</string>
    <string name="calendario">Calendário</string>
    <string name="historico_de_pontos">Histórico de Pontos</string>
</resources>