<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityTelaPrincipal">

    <ImageView
        android:id="@+id/icon_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/icon_chat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/icon_menu"
        tools:srcCompat="@drawable/menu_black_24dp" />

    <ImageView
        android:id="@+id/icon_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon_menu"
        app:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/icon_chat"
        tools:srcCompat="@drawable/chat_black_24dp" />

    <TextView
        android:id="@+id/txt_novidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/novidades"
        app:layout_constraintEnd_toStartOf="@+id/txt_destaques"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_menu" />

    <TextView
        android:id="@+id/txt_destaques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destaques"
        app:layout_constraintBottom_toBottomOf="@+id/txt_novidades"
        app:layout_constraintEnd_toStartOf="@+id/txt_equipe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_novidades" />

    <TextView
        android:id="@+id/txt_equipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equipe"
        app:layout_constraintBottom_toBottomOf="@+id/txt_destaques"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_destaques" />

    <ImageView
        android:id="@+id/img_person_1"
        android:layout_width="71dp"
        android:layout_height="83dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintEnd_toStartOf="@+id/img_person_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_novidades"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img_person_2"
        android:layout_width="71dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_person_1"
        app:layout_constraintEnd_toStartOf="@+id/img_person_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_person_1"
        android:contentDescription="@string/avatar_user"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img_person_3"
        android:layout_width="71dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_person_2"
        app:layout_constraintEnd_toStartOf="@+id/img_person_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_person_2"
        android:contentDescription="@string/avatar_user"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img_person_4"
        android:layout_width="71dp"
        android:layout_height="83dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintBottom_toBottomOf="@+id/img_person_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_person_3"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img_person"
        android:layout_width="63dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintStart_toStartOf="@+id/img_person_1"
        app:layout_constraintTop_toBottomOf="@+id/img_person_1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/people_person"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toEndOf="@+id/img_person"
        app:layout_constraintTop_toTopOf="@+id/img_person" />

    <TextView
        android:id="@+id/txt_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dream_team"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintStart_toStartOf="@+id/txt_person_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_person_name" />

    <TextView
        android:id="@+id/txt_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expert"
        app:layout_constraintStart_toStartOf="@+id/txt_team_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_team_name" />

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="328dp"
        android:layout_height="220dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintStart_toStartOf="@+id/img_person"
        app:layout_constraintTop_toBottomOf="@+id/img_person"
        app:srcCompat="@drawable/escrit_rios_pequenos_21" />

    <ImageView
        android:id="@+id/img_person_5"
        android:layout_width="63dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintStart_toStartOf="@+id/img_post"
        app:layout_constraintTop_toBottomOf="@+id/img_post"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_person_name_2"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_persona"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toEndOf="@+id/img_person_5"
        app:layout_constraintTop_toTopOf="@+id/img_person_5" />

    <TextView
        android:id="@+id/txt_equipe_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/go_ahead"
        app:layout_constraintStart_toStartOf="@+id/txt_person_name_2"
        app:layout_constraintTop_toBottomOf="@+id/txt_person_name_2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_starts_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noob"
        app:layout_constraintStart_toStartOf="@+id/txt_equipe_3"
        app:layout_constraintTop_toBottomOf="@+id/txt_equipe_3" />

    <ImageView
        android:id="@+id/icon_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/icon_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icon_notification"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@tools:sample/avatars"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/home_black_24dp" />

    <ImageView
        android:id="@+id/icon_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/icon_home"
        app:layout_constraintEnd_toStartOf="@+id/icon_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon_home"
        app:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/icon_notification"
        tools:srcCompat="@drawable/notifications_black_24dp" />

    <ImageView
        android:id="@+id/icon_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/icon_notification"
        app:layout_constraintEnd_toStartOf="@+id/icon_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon_notification"
        app:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/icon_add"
        tools:srcCompat="@drawable/add_black_24dp" />

    <ImageView
        android:id="@+id/icon_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_search"
        app:layout_constraintBottom_toBottomOf="@+id/icon_add"
        app:layout_constraintEnd_toStartOf="@+id/avatar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon_add"
        app:srcCompat="@tools:sample/avatars"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/search_black_24dp" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="44dp"
        android:layout_height="50dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintBottom_toBottomOf="@+id/icon_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon_search"
        app:layout_constraintTop_toTopOf="@+id/icon_search"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>