<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFirstScreen">

    <ImageView
        android:id="@+id/avatar_user"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintEnd_toStartOf="@+id/welcome_message"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/bem_vinde_fulano"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/avatar_user"
        app:layout_constraintTop_toTopOf="@+id/avatar_user" />

    <TextView
        android:id="@+id/user_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/noob"
        app:layout_constraintStart_toStartOf="@+id/welcome_message"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/user_conquistas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/suas_conquistas"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/avatar_user"
        app:layout_constraintTop_toBottomOf="@+id/avatar_user" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_history"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="#76c893"
        app:layout_constraintStart_toStartOf="@+id/user_conquistas"
        app:layout_constraintTop_toBottomOf="@+id/user_conquistas">

        <TextView
            android:id="@+id/txt_card_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/historico_de_pontos"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_acess_fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acesso_rapido"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="@+id/card_view_history"
        app:layout_constraintTop_toBottomOf="@+id/card_view_history" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_explorer"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#d9ed92"
        app:layout_constraintStart_toStartOf="@+id/txt_acess_fast"
        app:layout_constraintTop_toBottomOf="@+id/txt_acess_fast"
        app:cardCornerRadius="12dp">

        <TextView
            android:id="@+id/txt_explorer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/explorar"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_premios"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        app:cardBackgroundColor="#b5e48c"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toEndOf="@+id/card_view_explorer"
        app:layout_constraintTop_toTopOf="@+id/card_view_explorer">

        <TextView
            android:id="@+id/txt_premios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/premios"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_news"
        android:layout_width="100dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="#99d98c"
        app:cardCornerRadius="12dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/card_view_premios"
        app:layout_constraintTop_toTopOf="@+id/card_view_premios">

        <TextView
            android:id="@+id/txt_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/novidades"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/calendario"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/card_view_explorer"
        app:layout_constraintTop_toBottomOf="@+id/card_view_explorer" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>